# didact

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  download-sherpa-onnx-model.sh  notes.md  readme.md
demo/: main.py
include/: audio.h  clay_renderer_SDL3.c  decoder.h  error.h  fft.h  font.h  layout.h  queue.h  renderer.h  speech.h  transcriber.h  ui.h
include/transcriber/: analyzer.h  audio.h  speech.h  transcriber.h
src/: analyzer.cpp  analyzer.h  audio.cpp  audio.h  decoder.cpp  error.h  fft.cpp  font.cpp  main.cpp  microphone.h  pool.cpp  pool.h  queue.cpp  queue.h  renderer.cpp  speech.cpp  speech.h  transcriber.cpp  tts.cpp  tts.h
src/transcriber/: analyzer.cpp  audio.cpp  transcriber.cpp
